@@ -149,6 +149,7 @@ xdg_user_dir_lookup (const char *type)
     return strdup (home_dir);
 }
 
+#ifdef STANDALONE_XDG_USER_DIR_LOOKUP
 int
 main (int argc, char *argv[])
 {
@@ -161,3 +162,4 @@ main (int argc, char *argv[])
   printf ("%s\n", xdg_user_dir_lookup (argv[1]));
   return 0;
 }
+#endif
